[CSS] fix horizontal overflow error on mobile

--- a/app/javascript/src/styles/views/static/_home.scss
+++ b/app/javascript/src/styles/views/static/_home.scss
@@ -8,8 +8,8 @@ body.c-static.a-home {
     place-items: center;
     background: none;
     margin: 0 auto;
+    padding: 0;
     width: 100%;
-    padding: 1rem 0.5rem;
     box-sizing: border-box;
   }
 
@@ -18,7 +18,7 @@ body.c-static.a-home {
     flex-flow: column;
     align-items: center;
     gap: 0.5rem;
-    max-width: 480px;
+    max-width: 470px;
   }
 
 
